# rollup

./: .cspell.json  .gitignore  .gitmodules  .solhint.json  .solhintignore  NODL.sol  README.md  auth-design.md  coverage-test.lcov  coverage.lcov  coverage2.lcov  coverage3.lcov  docker-compose-custom-chain.yml  docker-compose-custom.yml  docker-compose-dev.yml  docker-compose-postgres.yml  docker-compose-testnet.yml  docker-compose-zk-setup.yml  docker-compose.yml  foundry.toml  hardhat.config.ts  lcov.info  package.json  postinstall.sh  remappings.txt  tsconfig.json  zk-custom-start.sh  zk-server.sh  zk-setup.sh  zk-start.sh
.devcontainer/: Dockerfile  devcontainer.json  install-tools.sh  testnet.exp  testnet.sh
.github/: copilot-instructions.md
.maintain/: Dockerfile.dapp-portal  Dockerfile.zk-postgres-setup  explorer.config.js
beacon-relay/: .gitignore  AGENTS.md  Cargo.toml
beacon-relay/config/: default.toml
beacon-relay/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
beacon-relay/src/routes/: health.rs  mod.rs
beacon-relay/tests/: health_test.rs
cache_hardhat-zk/: solidity-files-cache.json
clk-gateway/: .dockerignore  Dockerfile  HANDLE_GUARD_README.md  docker-compose.test.yml  docker-compose.yml  examples.md  jest.config.js  openapi.json  package-lock.json  package.json  tsconfig.json
contracts/: .env.example  .gitignore  .nft-contract-address  .solhint.json  NODL.sol  README.md  hardhat.config.ts  package.json
contracts-hh/: .gitignore  Dockerfile  hardhat.config.ts
deploy/: DeployGrantsBridge.ts  click_bounty.dp.ts  deploy.ts  (+4 more)
(+539 files in other folders)
