[package]
name = "beacon-relay"
version = "0.1.0"
edition = "2021"
description = "V2 gateway for the Nodle DePIN network — BLE beacon data relay"
license = "MIT"

[dependencies]
axum = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
